Adding the behaviours from the landing page

--- a/frontEnd/public/assets/styles/lateRooms.css
+++ b/frontEnd/public/assets/styles/lateRooms.css
@@ -2,3 +2,13 @@
     border: 0 none;
     box-shadow: none;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}	
+
+.pointer { 
+	cursor: pointer; 
+}
